# beat-montage-engine

./: .gitignore  README.md  config.example.yaml  config.yaml  project-scope.md  pyproject.toml
src/assembly/: ffmpeg_renderer.py
src/audio/: beat_detector.py  structure_analyzer.py
src/db/: models.py  query.py  semantic.py  session.py
src/pipeline/: run.py
src/planning/: montage_plan.py  timeline.py
src/retrieval/: clip_selector.py
